--- a/client/public/style.css
+++ b/client/public/style.css
@@ -6,11 +6,11 @@
   margin-top: 0.2rem;
 }
 
-img {
+/* img {
   width: 40rem;
   height: 20rem;
   border-radius: 100%;
-}
+} */
 
 .profile {
   /* max-width: 300px; Adjust the max-width as needed */
@@ -155,10 +155,10 @@ img {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-  width: 100vw;
-  /* display: flex; */
+  width: 100vw; 
+  display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   /* text-align: center; */
   color: #fff; /* White text color for contrast */
 }
